--- a/power/src/app/static/impressum/impressum.component.html
+++ b/power/src/app/static/impressum/impressum.component.html
@@ -1,47 +1,48 @@
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-12">
-      <h1 class="main-heading">Impressum</h1>
-      <h3>Anbieter gem. §5 Telemediengesetz und §55 Abs. 1 des Staatsvertrages über Rundfunk und Telemedien
-        (Rundfunkstaatsvertrag - RStV):</h3>
-      <p>
-        Landesamt für Geoinformation und Landesvermessung Niedersachsen (LGLN) <br>
-        Landesbetrieb Landesvermessung und Geobasisinformation <br>
-        Fachgebiet 223 Anwendungsentwicklung und Querschnittsaufgaben <br>
-        Podbielskistraße 331, 30659 Hannover
-      </p>
-      <h3>Vertretungsberechtigt und verantwortlich</h3>
-      <p>Richard Bischof, Dr. Marcel Ziems</p>
-      <h3>Haftungsausschluss</h3>
-      <h4>Inhalt des Onlineangebotes</h4>
-      <p>Bei dieser Anwendung handelt es sich ausschließlich um eine Demonstrationsanwendung. Die dargestellten Daten
-        dürfen nicht für andere Zwecke als die Nutzung dieser Demonstrationsanwendung verwendet werden.
-        Der Autor übernimmt keinerlei Gewähr für die Aktualität, Korrektheit, Vollständigkeit oder Qualität der
-        bereitgestellten Informationen. Haftungsansprüche gegen den Autor, welche sich auf Schäden materieller oder
-        ideeller Art beziehen, die durch die Nutzung oder Nichtnutzung der dargebotenen Informationen bzw. durch die
-        Nutzung fehlerhafter und unvollständiger Informationen verursacht wurden, sind grundsätzlich ausgeschlossen,
-        sofern seitens des Autors kein nachweislich vorsätzliches oder grob fahrlässiges Verschulden vorliegt.
-        Alle Angebote sind freibleibend und unverbindlich. Der Autor behält es sich ausdrücklich vor, Teile der Seiten
-        oder das gesamte Angebot ohne gesonderte Ankündigung zu verändern, zu ergänzen, zu löschen oder die
-        Veröffentlichung zeitweise oder endgültig einzustellen.</p>
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="main-heading">Impressum</h1>
+            <h3>Anbieter gem. §5 Telemediengesetz und §55 Abs. 1 des Staatsvertrages über Rundfunk und Telemedien
+                (Rundfunkstaatsvertrag - RStV):</h3>
+            <p>
+                Landesamt für Geoinformation und Landesvermessung Niedersachsen (LGLN) <br>
+                Landesbetrieb Landesvermessung und Geobasisinformation <br>
+                Fachgebiet 223 Anwendungsentwicklung und Querschnittsaufgaben <br>
+                Podbielskistraße 331, 30659 Hannover
+            </p>
+            <h3>Vertretungsberechtigt und verantwortlich</h3>
+            <p>Richard Bischof, Dr. Marcel Ziems</p>
+            <h3>Haftungsausschluss</h3>
+            <h4>Inhalt des Onlineangebotes</h4>
+            <p>Bei dieser Anwendung handelt es sich ausschließlich um eine Demonstrationsanwendung. Die dargestellten
+                Daten dürfen nicht für andere Zwecke als die Nutzung dieser Demonstrationsanwendung verwendet werden.
+                Der Autor übernimmt keinerlei Gewähr für die Aktualität, Korrektheit, Vollständigkeit oder Qualität der
+                bereitgestellten Informationen. Haftungsansprüche gegen den Autor, welche sich auf Schäden materieller
+                oder ideeller Art beziehen, die durch die Nutzung oder Nichtnutzung der dargebotenen Informationen bzw.
+                durch die Nutzung fehlerhafter und unvollständiger Informationen verursacht wurden, sind grundsätzlich
+                ausgeschlossen, sofern seitens des Autors kein nachweislich vorsätzliches oder grob fahrlässiges
+                Verschulden vorliegt. Alle Angebote sind freibleibend und unverbindlich. Der Autor behält es sich
+                ausdrücklich vor, Teile der Seiten oder das gesamte Angebot ohne gesonderte Ankündigung zu verändern, zu
+                ergänzen, zu löschen oder die Veröffentlichung zeitweise oder endgültig einzustellen.</p>
 
-      <h4>Verweise und Links</h4>
-      <p>Der Autor ist bestrebt, in allen Publikationen die Urheberrechte der verwendeten Grafiken, Tondokumente,
-        Videosequenzen und Texte zu beachten, von ihm selbst erstellte Grafiken, Tondokumente, Videosequenzen und Texte
-        zu nutzen oder auf lizenzfreie Grafiken, Tondokumente, Videosequenzen und Texte zurückzugreifen. Alle innerhalb
-        des Internetangebotes genannten und ggf. durch Dritte geschützten Marken- und Warenzeichen unterliegen
-        uneingeschränkt den Bestimmungen des jeweils gültigen Kennzeichenrechts und den Besitzrechten der jeweiligen
-        eingetragenen Eigentümer. Allein aufgrund der bloßen Nennung ist nicht der Schluß zu ziehen, dass Markenzeichen
-        nicht durch Rechte Dritter geschützt sind! Das Copyright für veröffentlichte, vom Autor selbst erstellte Objekte
-        bleibt allein beim Autor der Seiten. Eine Vervielfältigung oder Verwendung solcher Grafiken, Tondokumente,
-        Videosequenzen und Texte in anderen elektronischen oder gedruckten Publikationen ist ohne ausdrückliche
-        Zustimmung des Autors nicht gestattet.</p>
+            <h4>Verweise und Links</h4>
+            <p>Der Autor ist bestrebt, in allen Publikationen die Urheberrechte der verwendeten Grafiken, Tondokumente,
+                Videosequenzen und Texte zu beachten, von ihm selbst erstellte Grafiken, Tondokumente, Videosequenzen
+                und Texte zu nutzen oder auf lizenzfreie Grafiken, Tondokumente, Videosequenzen und Texte
+                zurückzugreifen. Alle innerhalb des Internetangebotes genannten und ggf. durch Dritte geschützten
+                Marken- und Warenzeichen unterliegen uneingeschränkt den Bestimmungen des jeweils gültigen
+                Kennzeichenrechts und den Besitzrechten der jeweiligen eingetragenen Eigentümer. Allein aufgrund der
+                bloßen Nennung ist nicht der Schluß zu ziehen, dass Markenzeichen nicht durch Rechte Dritter geschützt
+                sind! Das Copyright für veröffentlichte, vom Autor selbst erstellte Objekte bleibt allein beim Autor der
+                Seiten. Eine Vervielfältigung oder Verwendung solcher Grafiken, Tondokumente, Videosequenzen und Texte
+                in anderen elektronischen oder gedruckten Publikationen ist ohne ausdrückliche Zustimmung des Autors
+                nicht gestattet.</p>
 
-      <h4>Rechtswirksamkeit dieses Haftungsausschlusses</h4>
-      <p>Dieser Haftungsausschluss ist als Teil des Internetangebotes zu betrachten, von dem aus auf diese Seite
-        verwiesen wurde. Sofern Teile oder einzelne Formulierungen dieses Textes der geltenden Rechtslage nicht, nicht
-        mehr oder nicht vollständig entsprechen sollten, bleiben die übrigen Teile des Dokumentes in ihrem Inhalt und
-        ihrer Gültigkeit davon unberührt.</p>
+            <h4>Rechtswirksamkeit dieses Haftungsausschlusses</h4>
+            <p>Dieser Haftungsausschluss ist als Teil des Internetangebotes zu betrachten, von dem aus auf diese Seite
+                verwiesen wurde. Sofern Teile oder einzelne Formulierungen dieses Textes der geltenden Rechtslage nicht,
+                nicht mehr oder nicht vollständig entsprechen sollten, bleiben die übrigen Teile des Dokumentes in ihrem
+                Inhalt und ihrer Gültigkeit davon unberührt.</p>
+        </div>
     </div>
-  </div>
 </div>
