--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
@@ -1,74 +1,75 @@
 <div class="wrapper">
-  <!-- desktop -->
-  <div class="d-none d-md-block">
-    <div class="nav-scroller bg-white shadow-sm border-top">
-      <nav class="nav nav-underline d-flex justify-content-between">
-        <div class="nav">
-          <div class="btn-group d-flex">
-          </div>
+    <!-- desktop -->
+    <div class="d-none d-md-block">
+        <div class="nav-scroller bg-white shadow-sm border-top">
+            <nav class="nav nav-underline d-flex justify-content-between">
+                <div class="nav">
+                    <div class="btn-group d-flex">
+                    </div>
+                </div>
+                <div class="nav px-auto" style="position: relative;">
+                    <power-geosearch (selectResult)="flyTo($event)"></power-geosearch>
+                </div>
+                <div class="nav">
+                    <a class="nav-link" (click)="enableLocationTracking()">
+                        <img src="/assets/icons/geo.svg" width="25" height="25" alt="Ortung">
+                    </a>
+                    <a class="nav-link" (click)="toggle3dView()">
+                        <img src="/assets/icons/building.svg" width="25" height="25" alt="3D aktivieren/deaktivieren">
+                    </a>
+                    <a class="nav-link" (click)="resetMap()">
+                        <img src="/assets/icons/arrows-fullscreen.svg" width="25" height="25" alt="Karte zurücksetzen">
+                    </a>
+                </div>
+            </nav>
         </div>
-        <div class="nav px-auto" style="position: relative;">
-          <power-geosearch (selectResult)="flyTo($event)"></power-geosearch>
-        </div>
-        <div class="nav">
-          <a class="nav-link" (click)="enableLocationTracking()">
-            <img src="/assets/icons/geo.svg" width="25" height="25" alt="Ortung">
-          </a>
-          <a class="nav-link" (click)="toggle3dView()">
-            <img src="/assets/icons/building.svg" width="25" height="25" alt="3D aktivieren/deaktivieren">
-          </a>
-          <a class="nav-link" (click)="resetMap()">
-            <img src="/assets/icons/arrows-fullscreen.svg" width="25" height="25" alt="Karte zurücksetzen">
-          </a>
-        </div>
-      </nav>
     </div>
-  </div>
 
-  <!-- mobile -->
-  <div class="d-md-none">
-    <div class="nav-scroller bg-white shadow-sm border-top">
-      <nav class="nav nav-underline">
-        <div class="nav ml-auto">
-          <a class="nav-link" (click)="toggleSearchActive()">
-            <img src="/assets/icons/search.svg" width="25" height="25" alt="Suche">
-          </a>
-          <a class="nav-link" (click)="enableLocationTracking()">
-            <img src="/assets/icons/geo.svg" width="25" height="25" alt="Ortung">
-          </a>
-          <a class="nav-link" (click)="toggle3dView()">
-            <img src="/assets/icons/building.svg" width="25" height="25" alt="3D aktivieren/deaktivieren">
-          </a>
-          <a class="nav-link" (click)="resetMap()">
-            <img src="/assets/icons/arrows-fullscreen.svg" width="25" height="25" alt="Karte zurücksetzen">
-          </a>
+    <!-- mobile -->
+    <div class="d-md-none">
+        <div class="nav-scroller bg-white shadow-sm border-top">
+            <nav class="nav nav-underline">
+                <div class="nav ml-auto">
+                    <a class="nav-link" (click)="toggleSearchActive()">
+                        <img src="/assets/icons/search.svg" width="25" height="25" alt="Suche">
+                    </a>
+                    <a class="nav-link" (click)="enableLocationTracking()">
+                        <img src="/assets/icons/geo.svg" width="25" height="25" alt="Ortung">
+                    </a>
+                    <a class="nav-link" (click)="toggle3dView()">
+                        <img src="/assets/icons/building.svg" width="25" height="25" alt="3D aktivieren/deaktivieren">
+                    </a>
+                    <a class="nav-link" (click)="resetMap()">
+                        <img src="/assets/icons/arrows-fullscreen.svg" width="25" height="25" alt="Karte zurücksetzen">
+                    </a>
+                </div>
+            </nav>
         </div>
-      </nav>
     </div>
-  </div>
 
-  <power-geosearch [class.d-none]="!searchActive" (selectResult)="flyTo($event)"></power-geosearch>
+    <power-geosearch [class.d-none]="!searchActive" (selectResult)="flyTo($event)"></power-geosearch>
 
-  <div class="height-minus-header-map" [class.small]="flurstueckSelection.size > 0" #map>
-    <a class="anchor"></a>
+    <div class="height-minus-header-map" [class.small]="flurstueckSelection.size > 0" #map>
+        <a class="anchor"></a>
 
-    <mgl-map
-      id="map"
-      (click)="onMapClickEvent($event)"
-      [style]="MAP_STYLE_URL"
-      [trackResize]="true"
-      [bounds]="bounds"
-      (load)="loadMap($event)">
+        <mgl-map
+            id="map"
+            (click)="onMapClickEvent($event)"
+            [style]="MAP_STYLE_URL"
+            [trackResize]="true"
+            [bounds]="bounds"
+            (load)="loadMap($event)">
 
-      <mgl-vector-source id="geoserver" [tiles]="[ baseUrl +'/geoserver/gwc/service/wmts?REQUEST=GetTile&SERVICE=WMTS&VERSION=1.0.0&LAYER=alkis:ax_flurstueck&STYLE=&TILEMATRIX=EPSG:900913:{z}&TILEMATRIXSET=EPSG:900913&FORMAT=application/vnd.mapbox-vector-tile&TILECOL={x}&TILEROW={y}']">
-      </mgl-vector-source>
+            <mgl-vector-source id="geoserver"
+                               [tiles]="[ baseUrl +'/geoserver/gwc/service/wmts?REQUEST=GetTile&SERVICE=WMTS&VERSION=1.0.0&LAYER=alkis:ax_flurstueck&STYLE=&TILEMATRIX=EPSG:900913:{z}&TILEMATRIXSET=EPSG:900913&FORMAT=application/vnd.mapbox-vector-tile&TILECOL={x}&TILEROW={y}']">
+            </mgl-vector-source>
 
-      <mgl-layer
-        id="flurstuecke"
-        type="line"
-        [source]="'geoserver'"
-        [sourceLayer]="'ax_flurstueck'"
-        [paint]="{
+            <mgl-layer
+                id="flurstuecke"
+                type="line"
+                [source]="'geoserver'"
+                [sourceLayer]="'ax_flurstueck'"
+                [paint]="{
       'line-color': '#c4153a',
       'line-width': {
         'stops': [[14,0],[16,1],[18,2]]
@@ -77,59 +78,61 @@
         'stops' : [[14,0],[15,1]]
       }
     }"
-      ></mgl-layer>
+            ></mgl-layer>
 
-      <mgl-layer
-        id="flurstuecke-fill"
-        type="fill"
-        [source]="'geoserver'"
-        [sourceLayer]="'ax_flurstueck'"
-        [paint]="{
+            <mgl-layer
+                id="flurstuecke-fill"
+                type="fill"
+                [source]="'geoserver'"
+                [sourceLayer]="'ax_flurstueck'"
+                [paint]="{
       'fill-color': 'rgba(255,255,255,0)'
     }"
-      ></mgl-layer>
+            ></mgl-layer>
 
-      <mgl-layer
-        id="flurstuecke-highlighted"
-        type="fill"
-        [source]="'geoserver'"
-        [sourceLayer]="'ax_flurstueck'"
-        [paint]="{
+            <mgl-layer
+                id="flurstuecke-highlighted"
+                type="fill"
+                [source]="'geoserver'"
+                [sourceLayer]="'ax_flurstueck'"
+                [paint]="{
       'fill-color': 'rgba(255,0,0,0.4)'
     }"
-        [filter]="['in', '', '']"
-      ></mgl-layer>
+                [filter]="['in', '', '']"
+            ></mgl-layer>
 
-    </mgl-map>
+        </mgl-map>
 
-  </div>
+    </div>
 
-  <div class="">
-    <ngb-accordion #acc="ngbAccordion" style="background-color: white !important;">
-      <ngb-panel>
-        <ng-template ngbPanelHeader>
-          <div>
-            <div class="text-center">
-              <h5 class="m-0 mx-center">Wählen Sie ein oder mehrere Flurstücke auf der Karte</h5>
-            </div>
-          </div>
-        </ng-template>
-        <ng-template ngbPanelContent>
-          <table class="table table-bordered">
-            <tr>
-              <th>Amtliche Fläche</th>
-              <th>Wert</th>
-            </tr>
-            <tr *ngFor="let feature of this.flurstueckSelection | keyvalue">
-              <td>{{feature.value.properties.amtlicheflaeche | number }} m&#178;</td>
-              <td>{{feature.value.properties.wert | currency:'EUR':"symbol" : '1.2-2'}}</td>
-            </tr>
-          </table>
+    <div class="">
+        <ngb-accordion #acc="ngbAccordion" style="background-color: white !important;">
+            <ngb-panel>
+                <ng-template ngbPanelHeader>
+                    <div>
+                        <div class="text-center">
+                            <h5 class="m-0 mx-center">Wählen Sie ein oder mehrere Flurstücke auf der Karte</h5>
+                        </div>
+                    </div>
+                </ng-template>
+                <ng-template ngbPanelContent>
+                    <table class="table table-bordered">
+                        <tr>
+                            <th>Amtliche Fläche</th>
+                            <th>Wert</th>
+                        </tr>
+                        <tr *ngFor="let feature of this.flurstueckSelection | keyvalue">
+                            <td>{{feature.value.properties.amtlicheflaeche | number }} m&#178;</td>
+                            <td>{{feature.value.properties.wert | currency:'EUR':"symbol" : '1.2-2'}}</td>
+                        </tr>
+                    </table>
 
-          <h3>Summe {{ flurstueckSelection | keyvalue | flurstueckPipe | currency:'EUR':"symbol" : '1.2-2'}} </h3>
-        </ng-template>
-      </ngb-panel>
-    </ngb-accordion>
-  </div>
+                    <h3>
+                        Summe {{ flurstueckSelection | keyvalue | flurstueckPipe | currency:'EUR':"symbol" : '1.2-2'}}
+                    </h3>
+                </ng-template>
+            </ngb-panel>
+        </ngb-accordion>
+    </div>
 
 </div>
