--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -1,99 +1,103 @@
 <div bsModal #modalnewform="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <!-- modal head -->
-      <div class="modal-header">
-        <div class="modal-title h4 pull-left">
-          <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-earmark-medical align-baseline"
-            fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <path
-              d="M4 1h5v1H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V6h1v7a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2z" />
-            <path d="M9 4.5V1l5 5h-3.5A1.5 1.5 0 0 1 9 4.5z" />
-            <path fill-rule="evenodd"
-              d="M7 4a.5.5 0 0 1 .5.5v.634l.549-.317a.5.5 0 1 1 .5.866L8 6l.549.317a.5.5 0 1 1-.5.866L7.5 6.866V7.5a.5.5 0 0 1-1 0v-.634l-.549.317a.5.5 0 1 1-.5-.866L6 6l-.549-.317a.5.5 0 0 1 .5-.866l.549.317V4.5A.5.5 0 0 1 7 4zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
-          </svg>
-          <span i18n>&nbsp;Neues Formular</span>
-        </div>
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <!-- modal head -->
+            <div class="modal-header">
+                <div class="modal-title h4 pull-left">
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-earmark-medical align-baseline"
+                         fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                        <path
+                            d="M4 1h5v1H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V6h1v7a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2z"/>
+                        <path d="M9 4.5V1l5 5h-3.5A1.5 1.5 0 0 1 9 4.5z"/>
+                        <path fill-rule="evenodd"
+                              d="M7 4a.5.5 0 0 1 .5.5v.634l.549-.317a.5.5 0 1 1 .5.866L8 6l.549.317a.5.5 0 1 1-.5.866L7.5 6.866V7.5a.5.5 0 0 1-1 0v-.634l-.549.317a.5.5 0 1 1-.5-.866L6 6l-.549-.317a.5.5 0 0 1 .5-.866l.549.317V4.5A.5.5 0 0 1 7 4zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
+                    </svg>
+                    <span i18n>&nbsp;Neues Formular</span>
+                </div>
 
-        <!-- modal close button -->
-        <button type="button" class="close" i18n-title title="Schließen" data-dismiss="modal" i18n-aria-label
-          aria-label="Schließen" (click)="close()">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
+                <!-- modal close button -->
+                <button type="button" class="close" i18n-title title="Schließen" data-dismiss="modal" i18n-aria-label
+                        aria-label="Schließen" (click)="close()">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
 
-      <!-- modal body -->
-      <div class="modal-body">
-        <!-- generate form -->
-        <form #newForm="ngForm" i18n-aria-label aria-label="Einstellungen zum neuen Formular" onsubmit="return false;">
-          <!-- title -->
-          <div class="form-group">
-            <label for="formtitle" i18n>Formular Titel*</label>
-            <input type="text" class="form-control" [(ngModel)]="title" [class.is-invalid]="!title" id="formtitle"
-              name="formtitle" maxlength="200" i18n-placeholder placeholder="Mein Formular" required>
-          </div>
+            <!-- modal body -->
+            <div class="modal-body">
+                <!-- generate form -->
+                <form #newForm="ngForm" i18n-aria-label aria-label="Einstellungen zum neuen Formular"
+                      onsubmit="return false;">
+                    <!-- title -->
+                    <div class="form-group">
+                        <label for="formtitle" i18n>Formular Titel*</label>
+                        <input type="text" class="form-control" [(ngModel)]="title" [class.is-invalid]="!title"
+                               id="formtitle"
+                               name="formtitle" maxlength="200" i18n-placeholder placeholder="Mein Formular" required>
+                    </div>
 
-          <!-- service -->
-          <!--<div class="form-group">
-                        <label for="formservice" i18n>Verknüpfter Dienst</label>
-                        <select class="custom-select"
-                            [(ngModel)]="service"
-                            id="formservice"
-                            name="formservice"
-                            required disabled>
-                            <option value="" i18n>Keine Anbindung an andere Dienste</option>
-                            <option *ngFor="let serv of storage.serviceList; index as i"
-                                value="{{ serv.value }}">
-                                {{ serv.name }}
+                    <!-- service -->
+                    <!--<div class="form-group">
+                                  <label for="formservice" i18n>Verknüpfter Dienst</label>
+                                  <select class="custom-select"
+                                      [(ngModel)]="service"
+                                      id="formservice"
+                                      name="formservice"
+                                      required disabled>
+                                      <option value="" i18n>Keine Anbindung an andere Dienste</option>
+                                      <option *ngFor="let serv of storage.serviceList; index as i"
+                                          value="{{ serv.value }}">
+                                          {{ serv.name }}
+                                      </option>
+                                  </select>
+                              </div>-->
+
+                    <!-- template -->
+                    <div class="form-group">
+                        <label for="formtemplate" i18n>Template</label>
+                        <select class="custom-select" [(ngModel)]="template" id="formtemplate" name="formtemplate"
+                                required>
+                            <option value="" i18n>Standard</option>
+                            <option *ngFor="let templ of storage.formsList; index as i" value="{{ templ.id }}">
+                                {{ templ.title }}
                             </option>
                         </select>
-                    </div>-->
+                    </div>
 
-          <!-- template -->
-          <div class="form-group">
-            <label for="formtemplate" i18n>Template</label>
-            <select class="custom-select" [(ngModel)]="template" id="formtemplate" name="formtemplate" required>
-              <option value="" i18n>Standard</option>
-              <option *ngFor="let templ of storage.formsList; index as i" value="{{ templ.id }}">
-                {{ templ.title }}
-              </option>
-            </select>
-          </div>
-
-          <!-- tags -->
-          <div class="form-group">
-            <label for="formtag" i18n>Formular mit Tags markieren</label>
-            <input type="text" list="tags" class="form-control" [(ngModel)]="tagInput" (keyup.enter)="addTag()"
-              (change)="addTag()" id="formtag" name="formtag" maxlength="50" i18n-placeholder
-              placeholder="Tag mit ENTER bestätigen" required>
-            <datalist id="tags">
-              <option *ngFor="let tag of storage.tagList; index as i" value="{{ tag }}">
-            </datalist>
-            <div>
+                    <!-- tags -->
+                    <div class="form-group">
+                        <label for="formtag" i18n>Formular mit Tags markieren</label>
+                        <input type="text" list="tags" class="form-control" [(ngModel)]="tagInput"
+                               (keyup.enter)="addTag()"
+                               (change)="addTag()" id="formtag" name="formtag" maxlength="50" i18n-placeholder
+                               placeholder="Tag mit ENTER bestätigen" required>
+                        <datalist id="tags">
+                            <option *ngFor="let tag of storage.tagList; index as i" value="{{ tag }}">
+                        </datalist>
+                        <div>
               <span class="badge badge-pill badge-primary clickable mr-1" *ngFor="let tag of tagList; index as i"
-                i18n-title title="Löschen" role="button" tabindex="0" (click)="removeTag(i)"
-                (keyup.enter)="removeTag(i)">
+                    i18n-title title="Löschen" role="button" tabindex="0" (click)="removeTag(i)"
+                    (keyup.enter)="removeTag(i)">
                 {{ tag }}
               </span>
+                        </div>
+                    </div>
+                </form>
             </div>
-          </div>
-        </form>
-      </div>
 
-      <!-- modal buttons -->
-      <div class="modal-footer">
-        <button type="button" class="btn btn-success" i18n-title title="Formular erstellen" (click)="NewForm()">
-          <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-earmark-medical align-baseline"
-            fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <path
-              d="M4 1h5v1H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V6h1v7a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2z" />
-            <path d="M9 4.5V1l5 5h-3.5A1.5 1.5 0 0 1 9 4.5z" />
-            <path fill-rule="evenodd"
-              d="M7 4a.5.5 0 0 1 .5.5v.634l.549-.317a.5.5 0 1 1 .5.866L8 6l.549.317a.5.5 0 1 1-.5.866L7.5 6.866V7.5a.5.5 0 0 1-1 0v-.634l-.549.317a.5.5 0 1 1-.5-.866L6 6l-.549-.317a.5.5 0 0 1 .5-.866l.549.317V4.5A.5.5 0 0 1 7 4zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
-          </svg>
-          <span i18n>&nbsp;Erstellen</span>
-        </button>
-      </div>
+            <!-- modal buttons -->
+            <div class="modal-footer">
+                <button type="button" class="btn btn-success" i18n-title title="Formular erstellen" (click)="NewForm()">
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-earmark-medical align-baseline"
+                         fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                        <path
+                            d="M4 1h5v1H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V6h1v7a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2z"/>
+                        <path d="M9 4.5V1l5 5h-3.5A1.5 1.5 0 0 1 9 4.5z"/>
+                        <path fill-rule="evenodd"
+                              d="M7 4a.5.5 0 0 1 .5.5v.634l.549-.317a.5.5 0 1 1 .5.866L8 6l.549.317a.5.5 0 1 1-.5.866L7.5 6.866V7.5a.5.5 0 0 1-1 0v-.634l-.549.317a.5.5 0 1 1-.5-.866L6 6l-.549-.317a.5.5 0 0 1 .5-.866l.549.317V4.5A.5.5 0 0 1 7 4zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
+                    </svg>
+                    <span i18n>&nbsp;Erstellen</span>
+                </button>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
