--- a/power/src/app/static/start/start.component.scss
+++ b/power/src/app/static/start/start.component.scss
@@ -56,8 +56,8 @@ h1 {
     right: 10px;
     bottom: 10%;
     left: 10px;
-    content: "";
-    background-image: url("/assets/IMG_B691C85D0356-1.webp");
+    content: '';
+    background-image: url('~assets/IMG_B691C85D0356-1.webp');
     background-size: 280px 540px;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 5px;
