Fix some lint errors

--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -129,6 +129,11 @@
                             </span>
                         </div>
                     </div>
+
+                    <button type="submit"
+                            aria-hidden="true"
+                            disabled
+                            i18n>Absenden</button>
                 </form>
             </div>
 
