--- a/power/src/app/fragebogen/details/comment/comment.component.html
+++ b/power/src/app/fragebogen/details/comment/comment.component.html
@@ -58,6 +58,11 @@
                                    [(ngModel)]="comment">
                         </div>
                     </div>
+
+                    <button type="submit"
+                            aria-hidden="true"
+                            disabled
+                            i18n>Absenden</button>
                 </form>
             </div>
 
