--- a/power/src/app/fragebogen/details/maketask/maketask.component.html
+++ b/power/src/app/fragebogen/details/maketask/maketask.component.html
@@ -57,6 +57,11 @@
                                    [(ngModel)]="amount">
                         </div>
                     </div>
+
+                    <button type="submit"
+                            aria-hidden="true"
+                            disabled
+                            i18n>Absenden</button>
                 </form>
 
                 <!-- results -->
