--- a/power/src/app/fragebogen/details/publish/publish.component.html
+++ b/power/src/app/fragebogen/details/publish/publish.component.html
@@ -81,6 +81,11 @@
                                   <small id="accesstimeHelp" class="form-text text-muted" i18n>Angabe in Minuten. Hat keine Auswirkung auf die Bearbeitungszeit.</small>
                                   </div>
                               </div>-->
+
+                    <button type="submit"
+                            aria-hidden="true"
+                            disabled
+                            i18n>Absenden</button>
                 </form>
             </div>
 
