--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -131,6 +131,7 @@
                     </div>
 
                     <button type="submit"
+                            class="d-none"
                             aria-hidden="true"
                             disabled
                             i18n>Absenden</button>
