--- a/power/src/app/fragebogen/details/publish/publish.component.html
+++ b/power/src/app/fragebogen/details/publish/publish.component.html
@@ -83,6 +83,7 @@
                               </div>-->
 
                     <button type="submit"
+                            class="d-none"
                             aria-hidden="true"
                             disabled
                             i18n>Absenden</button>
