--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -97,7 +97,7 @@
                     </div>
 
                     <!-- tags -->
-                    <div class="form-group">
+                    <div class="form-group mb-0">
                         <label for="formtag"
                                i18n>Formular mit Tags markieren</label>
                         <input type="text"
