--- a/power/src/app/fragebogen/details/comment/comment.component.html
+++ b/power/src/app/fragebogen/details/comment/comment.component.html
@@ -45,7 +45,7 @@
                       i18n-aria-label
                       aria-label="Angabe eines Kommentares zu der PIN"
                       onsubmit="return false;">
-                    <div class="form-group row">
+                    <div class="form-group row mb-0">
                         <label for="comment"
                                class="col-sm-4 col-form-label"
                                i18n>Kommentar</label>
