--- a/power/src/app/fragebogen/details/publish/publish.component.html
+++ b/power/src/app/fragebogen/details/publish/publish.component.html
@@ -44,11 +44,11 @@
                       aria-label="Einstellungen zur Veröffentlichung des Formulares"
                       onsubmit="return false;">
                     <!-- pin type -->
-                    <div class="form-group row m-0">
-                        <label class="col-12 col-lg-3 col-form-label px-0"
+                    <div class="form-group row mb-0">
+                        <label class="col-sm-4 col-form-label"
                                for="pintype"
                                i18n>Zugangsschutz</label>
-                        <div class="col-12 col-lg-9 p-0">
+                        <div class="col-sm-8">
                             <select class="form-control"
                                     [(ngModel)]="pin"
                                     id="pintype"
