Fix lighthouse warnings

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -24,11 +24,18 @@
                 type="button"
                 (click)="isCollapsed = !isCollapsed"
                 [attr.aria-expanded]="!isCollapsed"
-                [class.active]="!isCollapsed">
-            <span class="navbar-toggler-icon"></span>
+                [class.active]="!isCollapsed"
+                aria-controls="navbarToggler"
+                i18n-aria-label
+                aria-label="Navigation umschalten">
+            <span class="navbar-toggler-icon"
+                  aria-hidden="true"></span>
+            <span class="sr-only"
+                  i18n>Navigation umschalten</span>
         </button>
         <div class="collapse navbar-collapse"
              style="z-index: 2000;"
+             id="navbarToggler"
              [collapse]="isCollapsed"
              [isAnimated]="true">
             <ul class="navbar-nav ml-auto">
@@ -130,13 +137,17 @@
         <footer class="pt-4 my-md-5 pt-md-5 border-top w-100 m-0 overflow-hidden">
             <div class="row justify-content-around">
                 <div class="col-md-4 text-center">
-                    <h5 i18n>Informationen</h5>
+                    <div class="h5"
+                         i18n>Informationen</div>
                     <ul class="list-unstyled text-small">
-                        <li><a href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/impressum/impressum-92629.html"
+                        <li class="m-2"><a
+                               href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/impressum/impressum-92629.html"
                                i18n>Impressum</a></li>
-                        <li><a href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/datenschutz/datenschutz-im-lgln-138166.html"
+                        <li class="m-2"><a
+                               href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/datenschutz/datenschutz-im-lgln-138166.html"
                                i18n>Datenschutz</a></li>
-                        <li><a href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/allgemeine_geschafts_und_nutzungsbedingungen_agnb/allgemeine-geschafts-und-nutzungsbedingungen-agnb-97401.html"
+                        <li class="m-2"><a
+                               href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/allgemeine_geschafts_und_nutzungsbedingungen_agnb/allgemeine-geschafts-und-nutzungsbedingungen-agnb-97401.html"
                                i18n>Allgemeine Geschäfts- <br>und Nutzungsbedingungen</a></li>
                     </ul>
                     <p class="text-muted"
