--- a/power/src/app/fragebogen/editor/editor.component.html
+++ b/power/src/app/fragebogen/editor/editor.component.html
@@ -357,6 +357,7 @@
                         <div class="float-lg-right stick-right m-1 m-lg-2">
                             <button type="button"
                                     class="btn btn-light btn-sm mr-2 drag-handle drag-mouse"
+                                    tabindex="-1"
                                     aria-hidden="true"
                                     i18n-title
                                     title="Verschieben">
